--- a/hehe.html
+++ b/hehe.html
@@ -79,7 +79,15 @@ function welcomePage(){
   app.innerHTML = `
     <h1>Hi, ${NAME} 🌙</h1>
     <p>
-      I’ve known you for almost 10 years.<br>
+      I’ve known you for almost <b>${YEARS} years</b>, and somehow you still manage to be my favorite
+            part of the timeline.
+          </p>
+          <p>
+            This is a small page with a big question, steeped like good tea and lit softly by the moon.
+</p>
+<p>
+  I know you love tea and adore the moon, so I tried to make this feel like both.
+
       You love tea, adore the moon,<br>
       and somehow still surprise me.
     </p>
@@ -142,4 +150,5 @@ welcomePage();
 </script>
 </body>
 </html>
+
 
