--- a/hehe.html
+++ b/hehe.html
@@ -293,7 +293,7 @@
 
         msg.innerHTML = `
           <p style="font-weight:900; font-size:18px; margin:0;">
-            YES?! 💗 Then it’s official: tea for two, and PLEASE Don't BLOCK ME🙃🌙.
+            YES?! 💗 Then it’s official? PLEASE Don't BLOCK ME🙃🌙.
           </p>
 
           <div class="moon-glow">
@@ -306,7 +306,7 @@
       noBtn.addEventListener("click", () => {
         msg.innerHTML = `
           <p style="font-weight:900; margin:0;">
-            You clicked NO?! Respect. Olympic-level precision. But… are you sure? 😅
+            You clicked NO?!Are you Sure? 😅
           </p>
         `;
       });
@@ -388,3 +388,4 @@
   </script>
 </body>
 </html>
+
